fix:modal overlapping

--- a/front/fisibet/src/components/FModal/index.scss
+++ b/front/fisibet/src/components/FModal/index.scss
@@ -8,14 +8,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 10;
   .modal--main--container {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-y: scroll;
     height: 100vh;
     .modal--content--container {
       width: 100%;
